chickadee.css
body {
  font-family: "Georgia", "Times New Roman", serif;
  background-color: #ffffff;
  margin: 0;
  padding: 0;
  font-size: 16px;
}

pre {
  font-family: "Courier", "Courier New", monospace;
  font-size: 14px;
  padding-left: 1em;
  margin: 0;
  margin-top: 1em;
  margin-bottom: 1em;
  border-left: 3px double black;
}
tt {
  font-family: "Courier", "Courier New", monospace;
  font-size: 16px;
}

div#body {
}
div#main {
  padding-left: 1em;
  padding-right: 1em;
  margin-top: 1em;
}
div#contents {
  float: right; width: 20%;
  border-left: 1px solid black;
  margin-left: 1em;
}

dt {
  font-weight: bold;
}

dl.defsig {
  border: 1px solid black;
  border-left: 3px solid black;
/*  border-right: 3px double black; */
  border-color: black;
  margin-left: 1em;
/*  margin-right: 1em; */
}

dt.defsig {
  padding: 0.2em 1.0em;
  background-color: #e8e8e8;
  color: #000000;
  border-bottom: 1px solid black;
  font-weight: bold;
  margin: 0;
}

dt.defsig {
  /* Both child elements are floating, so we introduce a new
     block context so they are encapsulated. */
  overflow: hidden;
  zoom: 1;
  min-height: 0;
}

dt.defsig span.type {
  float: right;
  color: #404040;
  font-weight: bold;
/*  border-left: 3px double black; */
}
dt.defsig span.sig {
/* monospace already set via tt */
  float: left;
}

.operator {
  color: #800000;
}

/* I want to change the margin-top to padding-top but
   paragraph margins will use the padding as a baseline;
   if margin & padding is 0, then tables are not offset */
dd.defsig {
  padding-left: 1em;
  padding-right: 1em;
  margin: 0;
  margin-top: 1em;
  margin-bottom: 1em;
  background-color: #ffffff;
}

h2 {
  border-top: 1px solid black;
  border-bottom: 1px solid black;
}

h3 {
  border-bottom: 1px solid #808080;
}

hr {
  border: 1px solid black;
}

table {
  border: 1px solid black;
  border-collapse: collapse;
/*  margin-left: auto;
  margin-right: auto;
*/
  margin-left: 2em;
  margin-right: 2em;
  margin-top: 0;
  margin-bottom: 0;
}
th {
  text-align: left;
  padding-left: 1em;
  padding-right: 1em;
  font-weight: bold;
  border: 1px solid black;
}
td {
  border: 1px solid black;
  padding-left: 1em;
  padding-right: 1em;
}
dl {
  margin-left: 1em;
}
dt {
  margin-top: 0.2em;
}

a {
  color: black;
  text-decoration: none;
  border-bottom: 1px solid black;
  font-weight: bold;
}

a:hover {
  color: white;
  background-color: black;
}

h1 {
  font-size: medium;
  padding-left: 0.3em;
  border-bottom: 3px double black;
  background-color: #ffffff;
  margin-bottom: 0;
  margin-top: 0;
}

h1 a {
  border: none;
  font-weight: bold;
  font-style: italic;
  padding-left: 0.2em;
  padding-right: 0.2em;
}

td.match-path {
  /* text-align: right; */
}

td.match-path a, ul.contents-list a {
  border: none;
  font-weight: normal;
  font-style: italic;
}

td.match-sig {
  padding: 0;
}
td.match-sig a {
  display: block;
  text-decoration: none;
  border: none;
  padding-left: 1em;
  padding-right: 1em;
  font-weight: normal;
}
td.match-sig tt {
/*  font-size: 14px; */
}

ul.contents-list {
  list-style-type: none;
  padding: 0;
  margin: 0;
  font-size: 90%;
}
ul.contents-list li {
  padding: 0;
  border-bottom: 1px solid black;
  margin: 0;
}
ul.contents-list li a {
  display: block;
  padding: 0 0.5em;
}

/* Introduce a new "Block formatting context" (9.4.1) 
   for each of these block elements by setting
   overflow to anything other than visible.  This
   allows blocks to flow around floats.  Certain
   elts, such as table cells, get a BFC automatically. */
#main dl, #main ul, #main ol,
#main h1, #main h2, #main h3,
#main h4, #main h5, #main h6 {
  overflow: hidden;
  /* Also set hasLayout in IE6 and IE7 */
  zoom: 1;
  min-height: 0;
}
/* New BFC for pre but allow horiz. scrollbar
   to appear rather than truncating content. */
#main pre {
  overflow: auto;
}

ul li {
  margin-bottom: 3px;  /* > 0 helps avoid cutoff of bottom link border */
}

form.lookup input.text, div#incsearch {
  width: 40%;
  font-family: "Georgia", "Times New Roman", serif;
  font-size: 16px;
  border: 1px solid #888888;
  padding-left: 0.2em; padding-right: 0.2em;
/*  padding: 2px; */   /* make up for 3px border on buttons */
}
form.lookup input.text:focus {
  outline: none;
  border: 1px solid black;
}
form.lookup input.button:focus {
/*  outline: 1px solid #888888; */
  border: 1px solid black;
  outline: none;
  background-color: #f4f4f4;
}
form.lookup input.button {
  margin-left: 1em;
  font-family: "Georgia", "Times New Roman", serif;
  font-size: 16px;
  border: 1px solid #888888;
  background-color: #fcfcfc;
  cursor: pointer;
}

#navskip {
  display: none;
}
div#contents h2{
  display: none;
}


div#incsearch {
  border: 1px solid #000000;
  overflow: hidden;
  zoom: 1;
  min-height: 0;
  padding: 0;
  position: absolute;
  /* Absolute position must be written on window resize (specifically,
     when input elt changes position or size */
  left: 18px; top: 110px;
  display: none;
  background-color: #ffffff;
  cursor: default;
}
div#incsearch ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}
div#incsearch ul li {
  margin: 0;
  padding: 0 0.5em;
}
div#incsearch ul li:hover {
  /* IE6 doesn't support :hover on non-A. */
  background-color: #bbbbbb;
}

